--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=./Group-652035.png" />
+  </head>
+  <body>
+    <p>이미지로 이동 중입니다...</p>
+  </body>
+</html>
